--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     I'm a full-stack developer specializing in MERN stack applications. I love
     creating dynamic and responsive web applications that provide great user
     experiences.
+    <br />Now working at CYN COMMUNICATION CO.,LTD. in IT support. | Learning
+    full-stack, I am currently practicing my personal project. My language in
+    not good
   </p>
 </div>
 <img
@@ -23,6 +26,5 @@
       </a>
     </li>
   </ul>
-
   <a href="#" class="pagination">&lt; View older posts</a>
 </section>
