--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <div class="author">
-  <h1 class="author__heading">Hi I'am Thongek Wpm</h1>
+  <h1 class="author__heading">Hi I'm Thongek "Next" Wongpomon</h1>
   <p class="author__body">
     I'm a full-stack developer specializing in MERN stack applications. I love
     creating dynamic and responsive web applications that provide great user
